# itk-modulizer

./: Manifest.txt  ManifestOfITKTests.txt  MonolithicITKToModularITK.sh  computeCodeCoverageLocally.sh  customRun.sh  findtests.sh  generatehierarchy.sh  generateincludes.sh  hierarchyexporternogropus.py  hierarchyexporternogroups.py  includefinder.py  includefindertocsv.py  modifyManifest.py  modulefinder.py  modulizer.py  movefiles.sh  replacingVariables.txt  run.sh  specialModuleFix.py  testFinder.py  testfinder.py
templateModule/: CTestConfig.cmake
templateModule/itk-common/: CMakeLists.txt
templateModule/itk-common/src/: CMakeLists.txt
templateModule/itk-template-module/: itk-module.cmake
templateModule/itk-template-module/test/: CMakeLists.txt
template_module/: CMakeLists.txt  CTestConfig.cmake
template_module/CMake/: itk-module-name-config-build.cmake.in  itk-module-name-config-install.cmake.in  itk-module-name-config-version.cmake.in
template_module/Source/: CMakeLists.txt
template_module/Testing/: CMakeLists.txt
visualization/: cone_layout.py  customRunVis.sh  graph_view.py  hierarchical_graph.py  hierarchical_graph2.py  hierarchical_ring.py  hierarchyexporter.py  hierarchyexporternogroups.py  icicle_view.py  includefinder.py  includefindertocsv.py  itkIncludes.csv  itkModulesNoGroups.xml  itkmodules.xml  tree_map.py  treemap_view.py  treering_hierarchical_view.py  treering_view_simple.py  vtk.sh
